We actually want small buttons with medium icons on resource list status

--- a/libs/common/src/lib/resources/resource-list/resource-list.component.html
+++ b/libs/common/src/lib/resources/resource-list/resource-list.component.html
@@ -73,6 +73,7 @@
           #rla="routerLinkActive"
           icon="clock-dash"
           size="small"
+          iconSize="medium"
           aspect="basic"
           iconAndText
           #pendingPopoverDirective="paPopoverRef"
@@ -95,6 +96,7 @@
           #rla="routerLinkActive"
           icon="warning"
           size="small"
+          iconSize="medium"
           kind="destructive"
           aspect="basic"
           iconAndText
