[sc-7863] Allow labels with underscore in labels expender component

--- a/libs/sistema/src/lib/labels-expander/labels-expander.component.html
+++ b/libs/sistema/src/lib/labels-expander/labels-expander.component.html
@@ -4,7 +4,7 @@
     <div class="label-selector">
       <pa-checkbox
         *ngFor="let label of labelset.value.labels"
-        [value]="currentSelection[labelset.key + '_' + label.title]"
+        [value]="currentSelection[getSelectionKey(labelset.key, label.title)]"
         (valueChange)="onSelection({ selected: $event, labelset: labelset.key, label: label.title })">
         {{ label.title }}
       </pa-checkbox>
