Fix sistema tabs style

--- a/libs/sistema/theme/tokens/_tabs.tokens.scss
+++ b/libs/sistema/theme/tokens/_tabs.tokens.scss
@@ -7,6 +7,8 @@ $color-text-tab-link: $color-dark-stronger;
 $color-background-tab-link: $color-light-stronger;
 $color-background-tab-link-active: $color-neutral-lightest;
 
+$color-tab-slider: $color-neutral-lighter;
+
 $font-size-tab-item: font-size(m);
 $font-weight-tab-item: $font-weight-regular;
 $font-weight-tab-item-active: $font-weight-semi-bold;
