--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -31,6 +31,8 @@ $rhythm: (
   35: ($spacer * 35),     //  35   unit - 280px - 17.5   rem
   40: ($spacer * 40),     //  40   unit - 320px - 20     rem
   41: ($spacer * 41),     //  41   unit - 328px - 20.5   rem
+  45: ($spacer * 45),     //  45   unit - 360px - 22.5   rem
+  47: ($spacer * 47),     //  47   unit - 376px - 23.5   rem
   48: ($spacer * 48),     //  48   unit - 384px - 24     rem
   50: ($spacer * 50),     //  50   unit - 400px - 25     rem
   53: ($spacer * 53),     //  53   unit - 424px - 26.5   rem
