Move desktop app components to sync library

--- a/libs/sync/src/lib/main-layout/main-layout.component.html
+++ b/libs/sync/src/lib/main-layout/main-layout.component.html
@@ -1,5 +1,5 @@
-<nde-topbar></nde-topbar>
-<nde-sidebar></nde-sidebar>
+<nsy-topbar></nsy-topbar>
+<nsy-sidebar></nsy-sidebar>
 <div class="page-wrapper">
   <div
     class="page-content"
