--- a/libs/sync/src/lib/history/history.component.scss
+++ b/libs/sync/src/lib/history/history.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import 'apps/dashboard/src/variables';
 
 .upload-history {
   max-width: calc(#{rhythm(90)} + #{rhythm(12)});
