account user name can be null

--- a/apps/manager-v2/src/app/manage-accounts/account-details/users/users.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/users/users.component.html
@@ -33,7 +33,7 @@
     <pa-table-cell>
       <small>{{ user.id }}</small>
     </pa-table-cell>
-    <pa-table-cell>{{ user.name }}</pa-table-cell>
+    <pa-table-cell>{{ user.name || '' }}</pa-table-cell>
     <pa-table-cell>{{ user.email }}</pa-table-cell>
     <pa-table-cell>
       <div class="manager-container">
