don't display manage account option only if hasOwnAccount is true
We currently have a weird behavior in the e2e where hasOwnAccount is false even though welcome endpoint returns the right value. We will need to investigate further, but in the meantime using a simple if solve the e2e problem.

--- a/libs/common/src/lib/user-menu/user-menu.component.html
+++ b/libs/common/src/lib/user-menu/user-menu.component.html
@@ -32,7 +32,8 @@
       (click)="createAccount()">
       {{ 'generic.create_account' | translate }}
     </pa-option>
-  } @else if (!standalone) {
+  }
+  @if (!standalone) {
     <pa-option
       data-cy="go-to-manage-account"
       icon="account"
