--- a/libs/sync/src/lib/main-layout/sidebar.component.html
+++ b/libs/sync/src/lib/main-layout/sidebar.component.html
@@ -34,7 +34,7 @@
     </div>
     <ul>
       <li
-        routerLink="/history"
+        [routerLink]="(basePath | async) + 'history'"
         routerLinkActive="active">
         {{ 'history.title' | translate }}
         <pa-icon
