--- a/libs/sync/src/lib/main-layout/sidebar.component.html
+++ b/libs/sync/src/lib/main-layout/sidebar.component.html
@@ -44,4 +44,21 @@
       </li>
     </ul>
   </ng-container>
+  <ul
+    *ngIf="isDashboard"
+    class="status"
+    [class.down]="isServerDown | async">
+    <li
+      [routerLink]="(basePath | async) + 'server'"
+      routerLinkActive="active">
+      <pa-icon
+        *ngIf="isServerDown | async"
+        name="warning"></pa-icon>
+      {{ ((isServerDown | async) ? 'generic.server_down' : 'generic.server_up') | translate }}
+      <pa-icon
+        class="arrow"
+        name="chevron-right"
+        size="small"></pa-icon>
+    </li>
+  </ul>
 </div>
